deploy/templates/product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-service

spec:
  type: ClusterIP

  selector:
    app: product-service

  ports:
    - port: 8000
      targetPort: 80
