deploy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress

spec:

  rules:

    - host: ecommerce.local

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /users
            pathType: Prefix

            backend:
              service:
                name: user-service
                port:
                  number: 8000

          - path: /products
            pathType: Prefix

            backend:
              service:
                name: product-service
                port:
                  number: 8000
